feat: 添加新字体并优化导航页面布局和功能
- 新增字魂白鸽天行体字体文件并配置CSS
- 添加分类导航按钮和回到顶部功能
- 调整导航链接布局和样式，增加卡片悬停效果
- 更新导航链接分类和内容
- 优化响应式设计，改进移动端显示效果

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,11 @@
     src: url("../fonts/Digital-Play-Italic-St-1.ttf");
     font-display: swap;
 }
+@font-face {
+    font-family: "ZHBGBXT";
+    src: url("../fonts/字魂白鸽天行体.ttf");
+    font-display: swap;
+}
 
 :root {
     /*
